--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -29,13 +29,16 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto Flex", "Helvetica", "Arial", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fafafa; }
+  background-color: #fafafa;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
+}
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -340,7 +343,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto Flex", "Helvetica", "Arial", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -4348,7 +4351,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto Flex", "Helvetica", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4433,7 +4436,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto Flex", "Helvetica", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -11065,7 +11068,7 @@ footer {
   color: #e91e63; }
 
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto Flex", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   line-height: 1.5em; }
 
@@ -11127,7 +11130,7 @@ small,
 .footer-big h4,
 .media .media-heading {
   font-weight: 700;
-  font-family: "Roboto", "Times New Roman", serif; }
+  font-family: "Roboto Flex", "Times New Roman", serif; }
   .title,
   .title a,
   .card-title,
@@ -13207,7 +13210,7 @@ thead.thead-inverse th,
     width: 100%; }
 
 .media .media-heading small {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif; }
+  font-family: "Roboto Flex", "Helvetica", "Arial", sans-serif; }
 
 .media .media-body {
   padding-right: 10px; }
